Fix Gap On progress_0 csMedLong

--- a/CSS/Viewer/Graphs/progress_0_csmedlong.css
+++ b/CSS/Viewer/Graphs/progress_0_csmedlong.css
@@ -24,7 +24,7 @@
     padding: 10px 0px 10px 0px;
     display: flex;
     flex-direction: column;
-    gap: 5px;
+    gap: 7px;
     justify-content: center;
     align-items: flex-start;
     text-align: center;
